--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+Click==7.0
 isort==4.3.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -8,7 +9,9 @@ more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
 pylint==2.3.1
+pymongo==3.7.2
 pytest==4.3.1
 six==1.12.0
+tinydb==3.13.0
 typed-ast==1.3.1
 wrapt==1.11.1
