--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+autopep8==1.4.3
 Click==7.0
 isort==4.3.15
 lazy-object-proxy==1.3.1
@@ -8,6 +9,7 @@ mccabe==0.6.1
 more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
+pycodestyle==2.5.0
 pylint==2.3.1
 pymongo==3.7.2
 pytest==4.3.1
