--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+appdirs==1.4.3
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
-autopep8==1.4.3
+black==19.3b0
 Click==7.0
 isort==4.3.15
 lazy-object-proxy==1.3.1
@@ -15,5 +16,6 @@ pymongo==3.7.2
 pytest==4.3.1
 six==1.12.0
 tinydb==3.13.0
+toml==0.10.0
 typed-ast==1.3.1
 wrapt==1.11.1
