--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.0
+version: 2.1
 
 jobs:
   build:
@@ -57,8 +57,8 @@ jobs:
             python -m pytest -v . --log-file=./test_log.txt
 
       - store_test_results:
-          path: ./test_log.txt
-
+          path: test-results
+          
   deploy_staging:
     docker:
       - image: circleci/python:3.7
@@ -114,7 +114,7 @@ jobs:
             '{"githash": "'"$GITHASH"'"}'
 
 workflows:
-  version: 2
+  version: 2.1
   build-test-deploy:
     jobs:
       - build
