--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,30 @@ appdirs==1.4.3
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
-black==19.3b0
+awscli==1.16.140
+botocore==1.12.130
 Click==7.0
+colorama==0.3.9
+docutils==0.14
 isort==4.3.15
+jmespath==0.9.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
+pyasn1==0.4.5
 pycodestyle==2.5.0
 pylint==2.3.1
 pymongo==3.7.2
 pytest==4.3.1
+python-dateutil==2.8.0
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.2.0
 six==1.12.0
 tinydb==3.13.0
 toml==0.10.0
 typed-ast==1.3.1
+urllib3==1.24.1
 wrapt==1.11.1
