--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 
 # Python
 *.py[cod]
-__pycache__/
-.pytest_cache/
 
 # IDE
 .idea/
 .vscode/
+
+# Testing/Coverage
+.coverage
+htmlcov/
+__pycache__/
+.pytest_cache/
