--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,6 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-      - persist_to_workspace:
-          root: ~/pytest_book
-          paths:
-            - .
-
   test:
     docker:
     - image: circleci/python:3.7
@@ -41,8 +36,7 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - attach_workspace:
-          at: /tmp/src/pytest_book
+      - checkout
 
       - restore_cache:
           keys:
@@ -69,8 +63,7 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - attach_workspace:
-          at: /tmp/src/pytest_book
+      - checkout
 
       - restore_cache:
           keys:
@@ -96,8 +89,7 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - attach_workspace:
-          at: /tmp/src/pytest_book
+      - checkout
 
       - restore_cache:
           keys:
