revert checkout vs persist changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,11 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
+      - persist_to_workspace:
+          root: ~/pytest_book
+          paths:
+            - .
+
   test:
     docker:
     - image: circleci/python:3.7
@@ -36,7 +41,8 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - checkout
+      - attach_workspace:
+          at: /tmp/src/pytest_book
 
       - restore_cache:
           keys:
@@ -63,7 +69,8 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - checkout
+      - attach_workspace:
+          at: /tmp/src/pytest_book
 
       - restore_cache:
           keys:
@@ -89,7 +96,8 @@ jobs:
     working_directory: /tmp/src/pytest_book
 
     steps:
-      - checkout
+      - attach_workspace:
+          at: /tmp/src/pytest_book
 
       - restore_cache:
           keys:
