--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,20 @@ jobs:
             mkdir test-results
             python -m pytest -v . --junitxml=test-results/pytest-report.xml
 
+      - run:
+          name: Code Coverage report
+          command: |
+          coverage run -m pytest -v
+          coverage report
+          coverage html --omit="~/envs/*"
+
       - store_test_results:
           path: test-results
+
       - store_artifacts:
           path: test-results
+      - store_artifacts:
+          path: htmlcov
 
   deploy_staging:
     docker:
